# Periscope

./: .env.example  .gitignore  .mcp.json  Cargo.toml  Makefile  README.md  current_plan.md  docker-compose.yml  goal.md  greeksTest.py  original_idea.md  plan.md  to_fix.md
backend-go/: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  go.mod  go.sum
backend-go/cmd/api/: main.go
backend-go/config/: config.go
backend-go/internal/api/: router.go
backend-go/internal/api/handlers/: options.go
backend-go/internal/api/middleware/: logger.go
backend-go/internal/models/: options.go
backend-go/pkg/database/: supabase.go
backend-go/pkg/errors/: errors.go
backend-go/pkg/massive/: client.go
documentation/: current_plan.md  infrastructure_plan.md  quantitative_plan.md
examples/: basic_usage.rs
frontend/: .dockerignore  Dockerfile  package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx  providers.tsx
frontend/components/: ExpirationDropdown.tsx  OptionsChain.tsx
frontend/lib/: api.ts  dateUtils.ts
src/: error.rs  lib.rs
src/client/: massive.rs  mod.rs
src/config/: mod.rs
src/models/: greeks.rs  mod.rs  options.rs
src/services/: mod.rs
supabase/migrations/: README.md  initial_schema.sql
tests/integration/: mod.rs
